--- a/new.html
+++ b/new.html
@@ -99,9 +99,9 @@
       <h2>Gallery</h2>
       <div class="gallery-grid">
         <!-- Example Images -->
-        <a href="images/art1.jpg" data-lightbox="art-gallery" data-title="Title of Art 1">
-          <img src="images/art1.jpg" alt="Art 1" />
-          <p class="caption">Title of Art 1</p>
+        <a href="images/IMG_9394.JPG" data-lightbox="art-gallery" data-title="Ogechi (God's time is the best)">
+          <img src="images/IMG_9394.JPG" alt="Ogechi (God's time is the best)" />
+          <p class="caption">Ogechi (God's time is the best) - Oil on Canvas, 2025</p>
         </a>
 
         <a href="images/art2.jpg" data-lightbox="art-gallery" data-title="Title of Art 2">
