--- a/new.html
+++ b/new.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
@@ -17,8 +17,8 @@
     }
 
     header {
-      background-color: #333;
-      color: #fff;
+      background-color: #119;
+      color: #ppp;
       padding: 1rem;
       text-align: center;
     }
@@ -114,7 +114,7 @@
     </section>
   </main>
 
-  <!-- Lightbox2 JS -->
+  <!-- Lightbox7 JS -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.5/js/lightbox.min.js"></script>
 </body>
 </html>
