--- a/index.html
+++ b/index.html
@@ -1,123 +1,108 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>OMJ ARTS</title>
-
-  <!-- Lightbox2 CSS -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.5/css/lightbox.min.css" />
-
-  <!-- Custom CSS -->
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-      background-color: #dbe5c3; /* Light olive background */
-      color: #1e1e1e;
-    }
-
-    header {
-      background-color: #d6336c; /* Rich pink header */
-      color: #fff;
-      padding: 1rem;
-      text-align: center;
-    }
-
-    main {
-      padding: 2rem;
-    }
-
-    h1, h2 {
-      text-align: center;
-    }
-
-    .gallery-grid {
-      display: grid;
-      grid-template-columns: repeat(5, 1fr);
-      gap: 15px;
-      padding: 20px 0;
-    }
-
-    .gallery-grid a {
-      text-align: center;
-      text-decoration: none;
-      color: inherit;
-    }
-
-    .gallery-grid img {
-      width: 100%;
-      height: auto;
-      border-radius: 8px;
-      transition: transform 0.2s ease;
-      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    }
-
-    .gallery-grid img:hover {
-      transform: scale(1.05);
-    }
-
-    .caption {
-      margin-top: 8px;
-      font-size: 0.9rem;
-      color: #d6336c; /* Rich pink caption */
-    }
-
-    @media (max-width: 768px) {
-      .gallery-grid {
-        grid-template-columns: repeat(2, 1fr);
-      }
-    }
-
-    @media (max-width: 480px) {
-      .gallery-grid {
-        grid-template-columns: 1fr;
-      }
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Chioma Abalogu - Artist</title>
+    <style>
+        body {
+            background-color: #6B5B4D; /* Olive mud */
+            color: #FFF8E1; /* Warm cream */
+            font-family: 'Georgia', serif;
+            text-align: center;
+            margin: 0;
+            padding: 0;
+        }
+        header {
+            background-color: #4A3F35;
+            padding: 20px;
+            font-size: 24px;
+            font-weight: bold;
+            letter-spacing: 2px;
+        }
+        .container {
+            max-width: 700px;
+            margin: 40px auto;
+            padding: 20px;
+        }
+        h1 {
+            font-size: 36px;
+            font-weight: bold;
+            text-transform: uppercase;
+        }
+        p {
+            font-size: 18px;
+            line-height: 1.6;
+        }
+        .gallery {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: 20px;
+            margin-top: 30px;
+        }
+        .gallery img {
+            width: 80%;
+            max-width: 500px;
+            border-radius: 10px;
+            box-shadow: 0px 4px 10px rgba(0,0,0,0.3);
+        }
+        .social {
+            margin-top: 20px;
+        }
+        .social a {
+            color: #FFF8E1;
+            text-decoration: none;
+            font-size: 20px;
+            border: 2px solid #FFF8E1;
+            padding: 10px 15px;
+            border-radius: 25px;
+            display: inline-block;
+            transition: background 0.3s, color 0.3s;
+        }
+        .social a:hover {
+            background-color: #FFF8E1;
+            color: #4A3F35;
+        }
+    </style>
 </head>
 <body>
-  <header>
-    <h1>OMJ ARTS</h1>
-  </header>
 
-  <main>
-    <section id="about">
-      <h2>About Me</h2>
-      <p>
-        I am a London-based Nigerian artist whose work is deeply rooted in the beauty, resilience, and richness of African culture and heritage. My journey into painting began as a personal escape—a hobby that brought me joy and solace. But in 2020, when I was laid off during the COVID-19 pandemic, art became my full-time passion, transforming my life in ways I never anticipated.
-      </p>
-      <p>
-        Five years in, I have exhibited my work extensively across the UK, sharing visual narratives that celebrate identity, tradition, and the stories of my people. My paintings, often created with oil on linen, blend portraiture and abstraction, capturing the spirit of African heritage with expressive textures and bold colors. I use an underpainting technique with white oil to bring depth and light to my compositions.
-      </p>
-      <p>
-        Beyond exhibitions, I am committed to using art as a tool for cultural preservation and dialogue. Through my work, I hope to inspire conversations, bridge histories, and connect people to the richness of African traditions. I continue to refine my craft, drawing inspiration from workshops, exhibitions, and the encouragement of fellow artists like Gabriel, whose support marked a turning point in my artistic journey.
-      </p>
-      <p>
-        This is more than just art for me—it is a mission to honor the past, celebrate the present, and shape the future through creativity.
-      </p>
-    </section>
+    <header>Chioma Abalogu - Visual Artist</header>
 
-    <section id="gallery">
-      <h2>Gallery</h2>
-      <div class="gallery-grid">
-        <a href="images/art1.jpg" data-lightbox="art-gallery" data-title="Title of Art 1">
-          <img src="images/art1.jpg" alt="Art 1" />
-          <p class="caption">Title of Art 1</p>
-        </a>
+    <div class="container">
+        <h1>About Me</h1>
+        <p>
+            I am a London-based Nigerian artist whose work is deeply rooted in the beauty, resilience, and richness of African culture and heritage. 
+            My journey into painting began as a personal escape—a hobby that brought me joy and solace. But in 2020, when I was laid off during the COVID-19 pandemic, 
+            art became my full-time passion, transforming my life in ways I never anticipated.
+        </p>
+        <p>
+            Five years in, I have exhibited my work extensively across the UK, sharing visual narratives that celebrate identity, tradition, and the stories of my people. 
+            My paintings, often created with oil on linen, blend portraiture and abstraction, capturing the spirit of African heritage with expressive textures and bold colors. 
+            I use an underpainting technique with white oil to bring depth and light to my compositions.
+        </p>
+        <p>
+            Beyond exhibitions, I am committed to using art as a tool for cultural preservation and dialogue. 
+            Through my work, I hope to inspire conversations, bridge histories, and connect people to the richness of African traditions. 
+            I continue to refine my craft, drawing inspiration from workshops, exhibitions, and the encouragement of fellow artists like Gabriel, 
+            whose support marked a turning point in my artistic journey.
+        </p>
+        <p>
+            This is more than just art for me—it is a mission to honor the past, celebrate the present, and shape the future through creativity.
+        </p>
 
-        <a href="images/art2.jpg" data-lightbox="art-gallery" data-title="Title of Art 2">
-          <img src="images/art2.jpg" alt="Art 2" />
-          <p class="caption">Title of Art 2</p>
-        </a>
+        <h1>Gallery</h1>
+        <div class="gallery">
+            <img src="CE0299A6-BFCE-4916-8741-87E5296CBE01.jpeg" alt="Chioma Abalogu Portrait">
+            <img src="3735D9EE-A8CF-4536-9239-7FB843296799.jpeg" alt="Chioma Abalogu in Traditional Dress">
+            <img src="E2864AB0-099F-4B93-9087-78419BF586D4.jpeg" alt="Oil Painting by Chioma Abalogu">
+        </div>
 
-        <!-- Add more images as needed -->
-      </div>
-    </section>
-  </main>
+        <div class="social">
+            <a href="https://instagram.com/omj.arts" target="_blank">Follow Me on Instagram</a>
+        </div>
+    </div>
 
-  <!-- Lightbox2 JS -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.5/js/lightbox.min.js"></script>
 </body>
 </html>
