--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         <h1>Gallery</h1>
         <div class="gallery">
             <img src="CE0299A6-BFCE-4916-8741-87E5296CBE01.jpeg" alt="Chioma Abalogu Portrait">
-            <img src="3735D9EE-A8CF-4536-9239-7FB843296799.jpeg" alt="Chioma Abalogu in Traditional Dress">
+            <img src="08A3ABE9-84E4-43B7-9477-969D60E3E771.png" alt="Chioma Abalogu in Traditional Dress">
             <img src="E2864AB0-099F-4B93-9087-78419BF586D4.jpeg" alt="Oil Painting by Chioma Abalogu">
         </div>
 
