--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <div class="gallery">
             <img src="C2A65599-3366-4F1D-AA2D-8AE1C4B40104.png" alt="Chioma Abalogu Portrait">
             <img src="08A3ABE9-84E4-43B7-9477-969D60E3E771.png" alt="Chioma Abalogu in Traditional Dress">
-            <img src="E2864AB0-099F-4B93-9087-78419BF586D4.jpeg" alt="Oil Painting by Chioma Abalogu">
+            <img src="images/IMG_9394.JPG" alt="Oil Painting by Chioma Abalogu">
         </div>
 
         <div class="social">
