--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Lightbox2 CSS -->
+<link href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/css/lightbox.min.css" rel="stylesheet">
+<!-- Lightbox2 JS -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/js/lightbox.min.js"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chioma Abalogu - Artist</title>
@@ -94,6 +98,14 @@
 
         <h1>Gallery</h1>
         <div class="gallery">
+            <div class="gallery">
+  <a href="images/artwork1.jpg" data-lightbox="gallery" data-title="Artwork Title 1">
+    <img src="images/thumbnails/IMG_9367.JPG_thumb.jpg" alt="Artwork Title 1">
+  </a>
+  <a href="images/artwork2.jpg" data-lightbox="gallery" data-title="Artwork Title 2">
+    <img src="images/thumbnails/artwork2_thumb.jpg" alt="Artwork Title 2">
+  </a>
+</div>
             <img src="C2A65599-3366-4F1D-AA2D-8AE1C4B40104.png" alt="Chioma Abalogu Portrait">
             <img src="08A3ABE9-84E4-43B7-9477-969D60E3E771.png" alt="Chioma Abalogu in Traditional Dress">
             <img src="images/IMG_9394.JPG" alt="Oil Painting by Chioma Abalogu">
