--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         <div class="gallery">
             <div class="gallery">
   <a href="images/artwork1.jpg" data-lightbox="gallery" data-title="Artwork Title 1">
-    <img src="images/thumbnails/IMG_9367.JPG_thumb.jpg" alt="Artwork Title 1">
+    <img src="IMG_9367.JPG" alt="Artwork Title 1">
   </a>
   <a href="images/artwork2.jpg" data-lightbox="gallery" data-title="Artwork Title 2">
     <img src="images/thumbnails/artwork2_thumb.jpg" alt="Artwork Title 2">
