--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
             <img src="08A3ABE9-84E4-43B7-9477-969D60E3E771.png" alt="Chioma Abalogu in Traditional Dress">
             <img src="images/IMG_9394.JPG" alt="Oil Painting by Chioma Abalogu">
             <img src="images/IMG_9367.JPG" alt="Oil Painting by Chioma Abalogu">
+            <img src="images/IMG_8892.jpg" alt="Oil Painting by Chioma Abalogu">
         </div>
 
         <div class="social">
