--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
             <img src="images/IMG_9367.JPG" alt="Oil Painting by Chioma Abalogu">
             <img src="images/IMG_8892.jpg" alt="Oil Painting by Chioma Abalogu">
             <img src="images/IMG_9408.HEIC" alt="Oil Painting by Chioma Abalogu">
+            <img src="images/IMG_9256.jpg" alt="Oil Painting by Chioma Abalogu">
         </div>
 
         <div class="social">
