--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
             <img src="images/IMG_8892.jpg" alt="Oil Painting by Chioma Abalogu">
             <img src="images/IMG_9408.HEIC" alt="Oil Painting by Chioma Abalogu">
             <img src="images/IMG_9256.jpg" alt="Oil Painting by Chioma Abalogu">
+            <img src="images/IMG_9024 3.JPG" alt="Oil Painting by Chioma Abalogu">
         </div>
 
         <div class="social">
