--- a/index.html
+++ b/index.html
@@ -72,7 +72,8 @@
 </head>
 <body>
 
-    <header>Chioma Abalogu - Visual Artist</header>
+    <header>Chioma Abalogu 
+        Visual Artist</header>
 
     <div class="container">
         <h1>About Me</h1>
